# patent-numbers

./: CHANGELOG.md  README.md  package.yaml  patent-numbers.cabal
src/: PatentNumbers.hs  Prelude.hs
src/Data/Patent/: Number.hs
src/Data/Patent/Number/: Parser.hs
test/: NumberSpec.hs  ParserSpec.hs
